falta solo remove

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -12,7 +12,7 @@
     <div class="col-md-9">
 
         <div class="thumbnail">
-            <img class="img-responsive" src="/images/{{product.imagen}}" alt="">
+            <img class="img-responsive" src="{{product.imagen}}" alt="">
             <div class="caption-full">
                 <h4 class="pull-right">${{product.precio}}</h4>
                 <h4><a href="#">{{product.marca}} - {{product.modelo}}</a>
