--- a/views/create.hbs
+++ b/views/create.hbs
@@ -23,6 +23,12 @@
             <input type="text" name="imagen" class="form-control" id="inputPassword3" placeholder="Imagen">
         </div>
     </div>
+    <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Precio</label>
+        <div class="col-sm-10">
+            <input type="text" name="precio" class="form-control" id="inputPassword3" placeholder="Precio">
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
