--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
     {{#each products}}
         <div class="col-md-3 col-sm-6 hero-feature">
             <div class="thumbnail">
-                <img src="http://placehold.it/800x500" alt="">
+                <a href="/update/{{_id}}"><img src="http://placehold.it/800x500" alt=""></a>
                 <div class="caption">
                     <h3>{{marca}}</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
